// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentTrack render album renders track 1`] = `
<Card>
  <Image
    as="img"
    src="path/to/image"
    ui={true}
  />
  <CardContent>
    <Progress
      percent={25}
      size="tiny"
    />
    <CardHeader>
      No Time for Caution
    </CardHeader>
    <CardMeta>
      (
      4:06
      ) 
      Hans Zimmer
    </CardMeta>
    <CardDescription>
      Interstellar: Original Motion Picture Soundtrack (Deluxe Digital Version)
       (2014)
    </CardDescription>
  </CardContent>
</Card>
`;

exports[`CurrentTrack render composer renders track 1`] = `
<Card>
  <Image
    as="img"
    src="path/to/image"
    ui={true}
  />
  <CardContent>
    <Progress
      percent={25}
      size="tiny"
    />
    <CardHeader>
      Silent Running
    </CardHeader>
    <CardMeta>
      (
      2:04
      ) 
      Joan Baez
    </CardMeta>
    <CardDescription>
      Peter Schickele
    </CardDescription>
  </CardContent>
</Card>
`;
